...
    <string name="email_address" />
    <string name="contact_number" />
    <string name="password_must_be_8_characters" />
    <string name="by_creating_an_account_or_signing_you_agree_to_our_terms_and_conditions" />
    <string name="invalid_details_please_re_enter_your_information" />
    <string-array name="role_options">
        <item>Employee</item>
        <item>Employer</item>
    </string-array>
    <string name="error">Error:</string>
    <string name="name" />
    <string name="quick_cash">QUICK CASH</string>
    <string name="forgot_password">Forgot password?</string>
...
